Added User APIs
