# task-management/model/user.go
@@ -1,0 +1,12 @@
+package model
+
+type User struct {
+	ID    int    `json:"id"`
+	Name  string `json:"name"`
+	Email string `json:"email_id"`
+}
+
+type CreateUserRequest struct {
+	Name  string `json:"name" binding:"required"`
+	Email string `json:"email_id" binding:"required"`
+}
